# C-Levenberg-Marquardt-Solver

./: BasicExample.cpp  CMakeLists.txt  LMSolver.cpp  README.md  demo.cpp  measurements.txt
prototype/: CMakeLists.txt  DataManipulator.h  MyGTSAMSolver.cpp  MyGTSAMSolver.h
solver/: DataManipulator.h  GTSAMSolver.h  LightLevenbergMarquardtOptimizer.h
